modifications and changed css

--- a/2011leanback/index.html
+++ b/2011leanback/index.html
@@ -10,7 +10,7 @@
     <title>YouTube -   Leanback
 </title>
       <link href="droidsanstv.css" rel="stylesheet" type="text/css">
-      <link rel="stylesheet" href="https://web.archive.org/web/20120427004340cs_/http://www.gstatic.com/youtube/leanback/15639e35/stylesheet/tv-html5.css" type="text/css" media="screen" charset="utf-8">
+      <link rel="stylesheet" href="tv-html5.css" type="text/css" media="screen" charset="utf-8">
   <style>
 #loader-bg {
         background-color: #0b0c0d;
