will this work?

--- a/2011leanback/index.html
+++ b/2011leanback/index.html
@@ -10,7 +10,7 @@
     <title>YouTube -   Leanback
 </title>
       <link href="droidsanstv.css" rel="stylesheet" type="text/css">
-      <link rel="stylesheet" href="tv-html5.css" type="text/css" media="screen" charset="utf-8">
+      
   <style>
 #loader-bg {
         background-color: #0b0c0d;
@@ -491,7 +491,7 @@ Turn off converted 3D
 
 </div>
 
-        <script src="tv-html5.js"></script>
+        <script src="loader.js"></script>
   <script>
   yt.pubsub.subscribe('init', function() {
       yt.setMsg({
