--- a/2013tv/index.html
+++ b/2013tv/index.html
@@ -135,7 +135,7 @@ window['environment'] = {
 };
 window['label'] = "fd55ba54";
 window['devjs'] = false;
-window['appRoot'] = "https://youtomb.github.io/assets/img/";
+window['appRoot'] = "https://youtomb.github.io/assets/";
     </script>
     <script src="2013tv-loader.js"></script>
   </body>
