--- a/index.html
+++ b/index.html
@@ -1,34 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body><title>CMD HUE</title><link rel="stylesheet" href="https://unpkg.com/7.css">
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-
-  function makeDraggable(el) {
-    const titleBar = el.querySelector(".title-bar");
-    let offsetX = 0, offsetY = 0, isDown = false;
-
-    titleBar.addEventListener("mousedown", (e) => {
-      isDown = true;
-      offsetX = e.clientX - el.offsetLeft;
-      offsetY = e.clientY - el.offsetTop;
-    });
-
-    document.addEventListener("mousemove", (e) => {
-      if (!isDown) return;
-      el.style.left = (e.clientX - offsetX) + "px";
-      el.style.top = (e.clientY - offsetY) + "px";
-      el.style.position = "absolute";
-    });
-
-    document.addEventListener("mouseup", () => {
-      isDown = false;
-    });
-  }
-
-  makeDraggable(document.querySelector(".window"));
-});
-</script>
 
 <style>
 
@@ -40,6 +12,13 @@ html, body {
 body {
   background-image: url("https://cmd-hue.github.io/perch.jpg");
   background-size: 100% 100%;
+}
+
+iframe.bobux {
+    right: 12px;
+    position: absolute;
+    bottom: 12px;
+    border: none;
 }
 </style>
 </body>
@@ -105,6 +84,6 @@ body {
 <small>More Coming Soon.</small>
         -->
 
-
+<iframe src="https://player.twitch.tv/?doodle10000&parent=cmd-hue.github.io" class="bobux"></iframe>
 </center>
 </html>
