--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@ iframe.bobux {
 <small>More Coming Soon.</small>
         -->
 
-<iframe src="https://player.twitch.tv/?doodle10000&parent=cmd-hue.github.io" class="bobux"></iframe>
+<iframe src="https://player.twitch.tv/?doodle10000&parent=cmd-hue.github.io&autoplay=true" class="bobux"></iframe>
 </center>
 </html>
