--- a/2013tv/index.html
+++ b/2013tv/index.html
@@ -128,7 +128,7 @@
 };
 window['environment'] = {
     "start_time": 1359842400,
-    "player_url": "https:\/\/web.archive.org\/web\/20130202223008\/https:\/\/s.ytimg.com\/yts\/jsbin\/tv-player-vfl6KXB6F.js",
+    "player_url": "https://cmd-hue.github.io/2013tv/tvplayer.js",
     "language": null,
     "experiments": [907720, 922207, 916612, 920704, 912806, 922403, 922405, 929901, 913605, 925710, 906938, 920201, 913302, 930101, 919009, 911116, 910221, 901451, 919114],
     "country": "US"
