--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@ iframe.bobux {
     bottom: 12px;
     border: none;
 }
+iframe.klox {
+    position: absolute;
+    left: 12px;
+    bottom: 12px;
+    border: none;
+}
 </style>
 </body>
 <iframe src="https://john.citrons.xyz/embed?ref=cmd-hue.github.io" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;"></iframe>
@@ -84,6 +90,7 @@ iframe.bobux {
 <small>More Coming Soon.</small>
         -->
 
-<iframe src="https://player.twitch.tv/?channel=doodle10000&parent=cmd-hue.github.io&autoplay=true" class="bobux" width="256" height="256"></iframe>
+<iframe src="https://player.twitch.tv/?channel=doodle10000&parent=cmd-hue.github.io&autoplay=true" class="bobux" width="454" height="256"></iframe>
+<iframe src="https://vdo.ninja/?scene&room=CollabVideoV2" class="klox" width="454" height="256"></iframe>
 </center>
 </html>
