--- a/plazi/index.html
+++ b/plazi/index.html
@@ -27,7 +27,7 @@
 	<script defer src="https://bonzi.gay/espeak.js"></script>
 	<script defer src="https://bonzi.gay/lib/jquery.min.js"></script>
 	<script defer src="https://bonzi.gay/lib/seedrandom.min.js"></script>
-	<script defer src="https://bonzi.gay/lib/socket.io-1.4.5.js"></script>
+	<script defer src="socket.js"></script>
 	<!-- <script defer src="https://bonzi.gay/lib/speakjs/speakClient.js"></script> -->
 	<script defer src="https://bonzi.gay/lib/jquery.contextMenu.min.js"></script>
 
