visit counter added for index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body><title>CMD HUE</title><link rel="stylesheet" href="https://unpkg.com/7.css">
-
+<a style="position:fixed;z-index:1339; !important;top:55px;right:3px;" href="http://www.snazzyspace.com/generators/viewer-counter/" title="SnazzySpace.com Viewer Counter" target="_blank"><img src="http://www.snazzyspace.com/generators/viewer-counter/counter.php/fid=1767193164/style=6/counter.png" border="0"></a>
 <style>
 
 html, body {
