reverted required code and index.html

--- a/2013tv/index.html
+++ b/2013tv/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html xmlns:ng="http://angularjs.org" xmlns:yt="http://youtube.com">
   <head>
+    <script>(function(){(function(){function d(a){this.t={};this.tick=function(a,c,b){b=void 0!=b?b:(new Date).getTime();this.t[a]=[b,c]};this.tick("start",null,a)}var a=new d;window.jstiming={Timer:d,load:a};if(window.performance&&window.performance.timing){var a=window.performance.timing,c=window.jstiming.load,b=a.navigationStart,a=a.responseStart;0<b&&a>=b&&(c.tick("_wtsrt",void 0,b),c.tick("wtsrt_","_wtsrt",a),c.tick("tbsd_","wtsrt_"))}try{a=null,window.chrome&&window.chrome.csi&&(a=Math.floor(window.chrome.csi().pageT),c&&0<b&&(c.tick("_tbnd",void 0,window.chrome.csi().startE),c.tick("tbnd_","_tbnd",b))),null==a&&window.gtbExternal&&(a=window.gtbExternal.pageT()),null==a&&window.external&&(a=window.external.pageT,c&&0<b&&(c.tick("_tbnd",void 0,window.external.startE),c.tick("tbnd_","_tbnd",b))),a&&(window.jstiming.pt=a)}catch(e){}})();})();</script>
     <title>YouTube TV</title>
     <link rel="icon" href="https://web.archive.org/web/20130311132549im_/https://s.ytimg.com/yts/favicon-vfldLzJxy.ico" type="image/x-icon">
     <meta name="msXboxApplication-ID" content="423607D1">
@@ -129,6 +130,7 @@ window['environment'] = {
     "start_time": 1359842400,
     "player_url": "https://cmd-hue.github.io/2013tv/tvplayer.js",
     "language": null,
+    "experiments": [907720, 922207, 916612, 920704, 912806, 922403, 922405, 929901, 913605, 925710, 906938, 920201, 913302, 930101, 919009, 911116, 910221, 901451, 919114],
     "country": "US"
 };
 window['label'] = "fd55ba54";
