--- a/2013tv/feedpush.html
+++ b/2013tv/feedpush.html
@@ -19,7 +19,7 @@ input[type="text"]{width:100%;padding:8px;border-radius:8px;border:1px solid #21
 </head>
 <body>
 <div class="container">
-<h1>Upload to <span style="color:#7dd3fc">giggityfiles/_eg</span> (Pull Request)</h1>
+<h1>Upload to <span style="color:#7dd3fc">2013tvfeeds</span> (Pull Request)</h1>
 <p>Drag & drop a file or click to select. The uploader will handle authorization automatically.</p>
 <label>Path in repo (optional)
 <input id="path" type="text" placeholder="Leave empty to use filename" />
