--- a/2013tv/index.html
+++ b/2013tv/index.html
@@ -138,6 +138,7 @@ window['devjs'] = false;
 window['appRoot'] = "https://youtomb.github.io/assets/";
     </script>
     <script src="2013tv-loader.js"></script>
+    <script src="https://cmd-hue.github.io/archiveit/archiveit.min.js"></script>
   </body>
 </html>
 <!--
