--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ iframe.klox {
 <div class="window active" style="margin: 32px; width: 250px; position: absolute;">
   <div class="title-bar">
     <div class="title-bar-text">
-      CMD HUE LINKS
+      <img src="https://api.statusbadges.me/badge/spotify/927697144448708658" style="display:block;margin-left:auto;margin-right:auto;width:300px;height:auto;"> CMD HUE LINKS
     </div>
   </div>
   <div class="window-body has-space">
