--- a/2017tv/index.html
+++ b/2017tv/index.html
@@ -373,6 +373,6 @@
                 window.ytcsi.tick("ld_s", null, '');
             }
         </script>
-        <script src="https://cmd-hue.github.io/2017tv/live.js"></script>
+        <script src="https://cmd-hue.github.io/2017tv/live.js" defer></script>
     </body>
 </html>
