font and icon fix

--- a/2017tv/index.html
+++ b/2017tv/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:yt="http://youtube.com">
     <head>
+        <style>
+            @font-face {
+                font-family: roboto-regulat;
+                src: url('https://cmd-hue.github.io/2017tv/Roboto-Regular-20140804.ttf');
+            }
+            @font-face {
+                font-family: youtube-icons;
+                src: url('https://cmd-hue.github.io/2017tv/2017tvicons.ttf');
+            }
+            </style>
         <script>
 
 
