--- a/2017tv/index.html
+++ b/2017tv/index.html
@@ -3,8 +3,8 @@
     <head>
         <style>
             @font-face {
-                font-family: roboto-regulat;
-                src: url('https://youtomb2016.github.io/assets/Roboto-Regular-20140804.ttf');
+                font-family: roboto-regular;
+                src: url('https://cmd-hue.github.io/2017tv/Roboto-Regular-20140804.ttf');
             }
             @font-face {
                 font-family: youtube-icons;
