--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ iframe.klox {
 <div class="window active" style="margin: 32px; width: 250px; position: absolute;">
   <div class="title-bar">
     <div class="title-bar-text">
-      <img src="https://api.statusbadges.me/badge/spotify/927697144448708658" style="display:block;margin-left:auto;margin-right:auto;width:300px;height:auto;"> CMD HUE LINKS
+      CMD HUE LINKS
     </div>
   </div>
   <div class="window-body has-space">
@@ -61,6 +61,8 @@ iframe.klox {
 <a href="/2011leanback">YouTube Leanback 2011-2012</a>
 <hr>
 <a href="/2017tv/">YouTube for TV 2017</a>
+<hr>
+<a href="/cmd/">CMDTV</a>
 <hr>
 <small>More Coming Soon.</small>
     </center>
