--- a/index.html
+++ b/index.html
@@ -95,6 +95,6 @@ iframe.klox {
         -->
 
 <iframe src="https://player.twitch.tv/?channel=doodle10000&parent=cmd-hue.github.io&autoplay=true" class="bobux" width="454" height="256"></iframe>
-<iframe src="https://vdo.ninja/?scene&room=cmdtv_v1&nocontrols&background=https://cmd-hue.github.io/cmdtv/offair.png" class="klox" width="454" height="256"></iframe>
+<iframe src="https://vdo.ninja/?scene&room=cmdtv_v1&nocontrols&speakermute&background=https://cmd-hue.github.io/cmdtv/offair.png" class="klox" width="454" height="256"></iframe>
 </center>
 </html>
