--- a/cmdtv/index.html
+++ b/cmdtv/index.html
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body>
-    <iframe src="https://vdo.ninja/?scene&room=cmdtv_v1&nocontrols&background=https://cmd-hue.github.io/cmdtv/offair.png"allowtransparency="true" allow="autoplay"></iframe>
+    <iframe src="https://vdo.ninja/?scene&room=cmdtv_v1&nocontrols&width=1920&height=1080&background=https://cmd-hue.github.io/cmdtv/offair.png"allowtransparency="true" allow="autoplay"></iframe>
     <script src="oneko.js"></script>
   </body>
 </html>
