broken link fix

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ iframe.klox {
 <hr>
 <a href="/2017tv/">YouTube for TV 2017</a>
 <hr>
-<a href="/cmd/">CMDTV</a>
+<a href="/cmdtv/">CMDTV</a>
 <hr>
 <small>More Coming Soon.</small>
     </center>
