--- a/2017tv/index.html
+++ b/2017tv/index.html
@@ -297,7 +297,7 @@
                     "tab_name_trending": false,
                     "show_preview_tooltip": false,
                     "new_mdx_skip_button_cast": false,
-                    "new_settings": false,
+                    "new_settings": true,
                     "airstream_unrefined_back": false,
                     "nimble_new_search_less_suggestions": true,
                     "airstream": false,
@@ -341,7 +341,7 @@
                     "mdx_enable_async_bc_test": false,
                     "use_youtubei_domain": true,
                     "hq_channel_thumbs": false,
-                    "sign_in_onboarding_dialog": false,
+                    "sign_in_onboarding_dialog": true,
                     "enable_navigator_language_extraction": false,
                     "navigation_item_in_music_shelf_on_homepage": "no_navigation_item",
                     "shared_device_toast": true,
@@ -357,7 +357,7 @@
                     "music_video_tile_on_all_tabs": false,
                     "multithumb_playlist_tile": false,
                     "atom_subscriptions_multirow_shelves": true,
-                    "music_video_tile": false,
+                    "music_video_tile": true,
                     "enable_why_this_ad_for_tv": false,
                     "bento_retention_bento_first": false,
                     "preload_next_video": false,
@@ -402,7 +402,7 @@
                     "inline_playback_no_animation": false,
                     "enable_safety_mode_rename": true,
                     "ftc_lowm_spec": true,
-                    "kids_enable_voice_search": false,
+                    "kids_enable_voice_search": true,
                     "hero_unit": false,
                     "airstream_cached_home": false,
                     "new_shelf_list": true,
