--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@ iframe.klox {
 <hr>
 <a href="/cmdtv/">CMDTV</a>
 <hr>
+<a href="/archivehome/">Archives</a>
+<hr>
 <small>More Coming Soon.</small>
     </center>
   </div>
