--- a/aframa/index.html
+++ b/aframa/index.html
@@ -1,6 +1,12 @@
-<a-scene">
+<html>
+  <head>
+    <title>AFRAMA</title>
+    <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
+  </head>
+  <body style="margin:0;overflow:hidden;">
+    <a-scene">
       <a-assets>
-        <img id="skytex" crossorigin="anonymous" src="https://cmd0hue.github.io/aframa/sky.jpg">
+        <img id="skytex" crossorigin="anonymous" src="https://cmd-hue.github.io/aframa/sky.jpg">
       </a-assets>
 
       <a-sky src="#skytex" rotation="0 -90 0"></a-sky>
@@ -9,3 +15,5 @@
 
       
     <a-entity id="teenick" gltf-model="https://cmd-hue.github.io/3d/teennick.glb" position="0 0.02936 -4.66106"></a-entity><a-entity gltf-model="https://cmd-hue.github.io/3d/moviesign.glb" scale="0.75 0.75 0.75" rotation="0 180 0" position="-0.1825 40.67774 -104.39195" id="movie"></a-entity><a-entity gltf-model="https://cmd-hue.github.io/3d/spiraltooie.glb" position="0 -89.95513 0" scale="0.05 0.05 0.05" id="spiraltooie"></a-entity></a-scene>
+    </body>
+</html>
