--- a/aframa/index.html
+++ b/aframa/index.html
@@ -4,7 +4,7 @@
     <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
   </head>
   <body style="margin:0;overflow:hidden;">
-    <a-scene">
+    <a-scene>
       <a-assets>
         <img id="skytex" crossorigin="anonymous" src="https://cmd-hue.github.io/aframa/sky.jpg">
       </a-assets>
