--- a/aframa/index.html
+++ b/aframa/index.html
@@ -12,8 +12,8 @@
       <a-sky src="#skytex" rotation="0 -90 0"></a-sky>
 
       
-<a-entity camera="" wasd-controls="fly: true" look-controls="" aframe-injected=""></a-entity>
-      
+<a-entity camera="" wasd-controls="fly: true" look-controls="" aframe-injected="" position="0 2.1812378212153627 0" rotation="2.7958235810886767 0.687549354156991 0"></a-entity>
+
     <a-entity id="teenick" gltf-model="https://cmd-hue.github.io/3d/teennick.glb" position="0 0.10085 -4.66106"></a-entity><a-entity gltf-model="https://cmd-hue.github.io/3d/moviesign.glb" scale="0.75 0.75 0.75" rotation="0 180 0" position="-0.1825 40.67774 -104.39195" id="movie"></a-entity><a-entity gltf-model="https://cmd-hue.github.io/3d/spiraltooie.glb" position="0 -89.95513 0" scale="0.05 0.05 0.05" id="spiraltooie"></a-entity></a-scene>
     </body>
 </html>
