live.js was forgotten to be added

--- a/e14tv/index.html
+++ b/e14tv/index.html
@@ -125,6 +125,6 @@
             window['devjs'] = false;
             window['appRoot'] = "e";
         </script>
-        <script src="/s/tv/html5/loader/live.js"></script>
+        <script src="live.js"></script>
     </body>
 </html>
