--- a/e14tv/index.html
+++ b/e14tv/index.html
@@ -123,7 +123,7 @@
             };
             window['loader'] = "live";
             window['devjs'] = false;
-            window['appRoot'] = "e";
+            window['appRoot'] = "";
         </script>
         <script src="live.js"></script>
     </body>
