Update configuration options in index.html

--- a/e14tv/index.html
+++ b/e14tv/index.html
@@ -119,6 +119,9 @@
                 "network_retry": true,
                 "voice_gesture_sw": 100,
                 "player_url": "https:\/\/s.ytimg.com\/yts\/jsbin\/tv-player-en_US-vflxeNLds.js",
+                "useStageGdata": true,
+                "useReleaseInnerTube": false,
+                "useTestInnerTube": false,
                 "language": null
             };
             window['loader'] = "live";
