changed all cors proxies to https://proxy.corsfix.com/

--- a/fixtux.html
+++ b/fixtux.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+https://proxy.corsfix.com/?<!DOCTYPE HTML>
 <html prefix="og: https://ogp.me/ns#" data-bs-theme="dark">
   <head>
     <title>CollabVM - fixtux // vm</title>
