preview of redesigned index.html soon

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ iframe.klox {
 <hr>
 <a href="/archivehome/">Archives</a>
 <hr>
-<small>More Coming Soon.</small>
+<small>New look Coming Soon. <a href="/preview.html">Try it now!</a></small>
     </center>
   </div>
 </div>
@@ -96,7 +96,5 @@ iframe.klox {
 <small>More Coming Soon.</small>
         -->
 
-<iframe src="https://player.twitch.tv/?channel=doodle10000&parent=cmd-hue.github.io&autoplay=true" class="bobux" width="454" height="256"></iframe>
-<iframe src="https://vdo.ninja/?scene&room=cmdtv_v1&nocontrols&width=1920&height=1080&background=https://cmd-hue.github.io/cmdtv/offair.png" class="klox" allow="autoplay" width="454" height="256"></iframe>
 </center>
 </html>
